tooling/nargo_cli/tests/snapshots/execute__tests__brillig_calls_conditionals_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "4883258762785627826",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1YTYvTUBR9+epMKqWD7gR3uhRS26EVN4KdmerM1h8QLdWdIIiICPnpNnpvc3Ly0mmnucwMzIXykryTcz9yct9LA/ffwvUvkONYxgDGyNVN597KmB1mow65MqsYg3sQY2gQ4z+L6OGHrt00qT8ypjKGMB91mHRKfrvkn2WTZerJr8P4xynV1Io/suHPjoTnQ1Hxcy4ORsXxPRFgLgFz2YK5AswVYTRnI03kxjUdD1zzPdNc1Hds43sSkD9HeTry33em+h0F5E/j4fro8UAxRRVPQHNx0cxD55Kinkdpx+vfU8CxtkLAvYDjl3JsrMelcQ/JnmzJWa8dFW5jm3cermldtc7HiKe5FObiou6nL+cx+EEujSMh/HM5H8rYg3v0/hOP/x75r8XtucZ1ST341IPvrX/P5PiRq9bNd0XF1+UzVf65Df9mXT6z4X+l/Oc2/GPlv7Dhnyr/woZ/pvzvbfhflxote9wnV/Hzx0Lk6n2jtLnEM3TtewXjNe5Ue3jimqZzPfDN77SjHNEw7rI+X4GXcewT11n0jzFo3+Naq04Twr+R0bim2WPgdR5fu2hDe8WDNpo+D9GG9hjWxkLG+6AN7fO7aMNoXz4ZUOxorJubaAP3m/toA+uK/tu0gRy6PrA2Pspo/f3o0wY/T4t983oLkd81vQRUC7Qu9YK6ZP+KR73gd5buRxPC5zLepl5w3xwX3fufzrJM/UZQB3426D8h/Bc573vyiA+IczXNR6txvspP8+Vy8jnnOpUWQp1w77bt/wafJqMt3CeuXTPc69t60lzwCeF/yViuf9/cfpxnLZw/gfP7npznLZw/gPO3HPvqor33OtxiR9yFBzd0zd6COvgLvWDV7QUYAAA=",
  "debug_symbols": "ldffioJAFAbwd5lrL+bvOWd6lWUJKwtBNMwWlujdVyPdGIfiu4lG/HFm/A7iualDtbuetnV77C5q83VTTbcvh7prx9XtXqhdXzdNfdq+XlZ6+vH0uP9yLttpeRnKflAbE12hqvYw/ePRH+umUpug79+F8gwLyQoxi5BURFQEDQsDCwsLBwsPi/BeWO1SQbBgWAgssplbN/eVdWlfkYZFNnNrl1259OmShYWDhYdFgAXBgmEhH4RPM6eICtawMLDIZ85LX3HaV+xgkc+cll1x+nQ5wIJgwbAQWERUiIaF+SAkzVwsLBwsPCyymTs9C2coFQQLhoXAIqIialgYWFhYuA/CmlR4WARYECqMzhYJXj9J8GtCOGGcZHsrhPksIaRvUmOywZO2T0JaViSbCoX5fU0hrkj2LMRxJrKuku16sjKT1feJsdmzBOb5+EIr4rCN3cfVT9nX5a6pnuPB8druX6aF4fdcJYPDue/21eHaV9MI8T89TKUtFY4e0Y2LKIXRbqwx1vkD",
  "file_map": {
    "50": {
      "source": "// Tests a very simple program.\n//\n// The features being tested is brillig calls with conditionals\nfn main(x: [u32; 3]) {\n    // Safety: testing context\n    unsafe {\n        assert(entry_point(x[0]) == 7);\n        assert(entry_point(x[1]) == 8);\n        assert(entry_point(x[2]) == 9);\n        assert(entry_point(42) == 0);\n    }\n}\n\nunconstrained fn inner_1() -> u32 {\n    7\n}\n\nunconstrained fn inner_2() -> u32 {\n    8\n}\n\nunconstrained fn inner_3() -> u32 {\n    9\n}\n\nunconstrained fn entry_point(x: u32) -> u32 {\n    let mut result: u32 = 0;\n\n    if x == 1 {\n        result = inner_1();\n    } else if x == 2 {\n        result = inner_2();\n    } else if x == 3 {\n        result = inner_3();\n    }\n\n    result\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/brillig_calls_conditionals/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
