tooling/nargo_cli/tests/snapshots/execute__tests__brillig_conditional_force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "16972928223687137159",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7WVS07DMBCGHScRDQiQaLtgA1ewa7txdlnAQVKanKNHJxEeOp0YKjXjkSwnfvz+/PuViZ/Ix1SG72JMWUg0oKwNuVoWGmsZtbe2r3e9NrpTu+bgnbLusPfaa+fdceeN6b31dXNoatVoa3o9uMYMQSyLcCYBnjQl0eWA52KUjFypPJQR3aWsko9RFXQjiXSHgJMb8+bXwJcanvOB24ntP9NpwAF8D3lFyrNgQMu0SBXS5db3yu4rMV8rRn5TicuLK4U/oJlAX90FnY/TWZ/ORaAc2tE+UzyK+QsHbVZjehLn72fUZ4pPpAX9U3o77g2X2Fu9Fn/7+RB8eA3/MtKWXjqUNVaPz5FE9VWkrOWZp4XxCjKXPMKSkMNRj+UVT6iH9K7EawX3SHG6rG8Z2Gt/fmDyoF+KyEODxi9J+7fwf4/48ZzaGzmHutOD6YbOdcej/epeiP4UMuIT5FvB75dC78Ymjf7vvYhji743ZJ4J9rMCPdgHpZiHJHXQdkX4Mn4+TVnyyFgQ65BvUBn4+Q0nBMrBLg0AAA==",
  "debug_symbols": "lZDLCoMwEEX/ZdZZRK1U/ZUiEjWRQEhCHoUS8u9NSlOk6MLdnLmcGbgBVjr7beKSKQvDI4BQC3FcyUQB8GdlNZGZrCPGwVD1NQIq1zx1EQHjgsLQ4jgiqK4K9VWhORQ6/BP6P+F2KNzbEyHBbLgQfJv2VaT1kxhOZkG/yLxcdql76ZIUXxu10NUbmi+VPgNUudW6RQ0eY0wP3w==",
  "file_map": {
    "50": {
      "source": "// Tests a very simple program.\n//\n// The features being tested is basic conditional on brillig\nfn main(x: Field) {\n    // Safety: testing context\n    unsafe {\n        assert(4 == conditional(x == 1));\n    }\n}\n\nunconstrained fn conditional(x: bool) -> Field {\n    if x {\n        4\n    } else {\n        5\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "conditional",
    "directive_invert"
  ]
}
