tooling/nargo_cli/tests/snapshots/execute__tests__brillig_conditional_force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "7774425806720902688",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUTU/DMAz10kYQBhzgChe4cki1VttxEvyRiKm/oz8dItmK9WqYtCVPqpwP59l+cbqhgg3bHuZk+BzZxuswVOSKZqL/QXw+2Aa2Tu13FYsNELcm/yGOUzDqq5j/LjBnS32EswF/vGGer6XwYy0ZDzzXPSRnbn+/eyrjRx4HONPibhtqH5+N/J2qLeNzKXpUijtuWcdX0NFR9ViD1i3Dn6m5od6j9FhPa8ieh9hE9n+tg7nOO2v7rnjRD2NqLfwfnLIu/aDPefB9Ydv6bT8pXoJYWyo93C/14+8PMUrcbik64L3o+B7833h+Z9TRX5HnvE/DvEtzmtLpNH4n1CnDKZ30W3S0fgP6XEfrO7X2rfdFxpoDvgzpsWDsHekyTQCT5NFDHlYvWXWiRsKT9fwB9qWjjmEJAAA=",
  "debug_symbols": "ldLRCoMgFAbgdznXXqjLyl5ljLCyEETDbDCid5+OMSLaxbkRf/E7N+ffYNDdOrXGjX6B5r6B9b2KxruUtp1AF4y1ZmqPz0DzwcTn/zIrl+MSVYjQMMkJaDfkW538aKyGRtD9QYCVaFFdipr+hDyLGi0kVnCKFgwtOFrc0KK4FJX4LwRalGhR4cSe0lMFozqrv6UdV9cfOhxfsz7VeQ6+18MadC72odN5s1ySW5HGptFv",
  "file_map": {
    "50": {
      "source": "// Tests a very simple program.\n//\n// The features being tested is basic conditional on brillig\nfn main(x: Field) {\n    // Safety: testing context\n    unsafe {\n        assert(4 == conditional(x == 1));\n    }\n}\n\nunconstrained fn conditional(x: bool) -> Field {\n    if x {\n        4\n    } else {\n        5\n    }\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/brillig_conditional/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
