tooling/nargo_cli/tests/snapshots/execute__tests__brillig_conditional_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "7774425806720902688",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VVwQ6CMAydY4tO5KJXvegPjACB4w7+yCLhO/h0JemyphnEaNeElLLute91YTsRbQdekVgkchx4+5/VjFg22eiWhZwHeANeovWCkawhdTnxB9t2JsGPsf/GAGZOfQJmBny7B5znHPEpl8UqiPEZCnsOn+ck4nsF74bsyTHbjNrbS6L/UKsErjfCVSJ9mPqoMbfF9EZfckXzYIVYnzFex+cNz9wkvjkenm2opwgXmeglo95dqKVJH1gTXDcV4wtDk7Vv5qhJ7pXwVgTP8XC3Z4RLuZQi3gdq5q/fD9aGusUcdcDnU5D6muTfIT6u8HA/9jn1vp4aP/nOj2P78lSnxfC/4Q3KXc5YRQgAAA==",
  "debug_symbols": "lZHdCoMwDEbfJde9UGd1+ioypGqUQmmlP4NR+u5rxxhFdtObkC/khMDxsOHijpnLXRkYJw9CrcxyJWPygcCiuRD8mPMxVKnU7WffnEymaCzTFsZ6aAig3FJ3j/zOBcJIq/AgUNNioislmv9f9fRHDFeCFhNdMdGXESGmJ9OcLQK/InYn18yLfZ14UXRqteLmNCZZmadYp2Ygtzaejaff",
  "file_map": {
    "50": {
      "source": "// Tests a very simple program.\n//\n// The features being tested is basic conditional on brillig\nfn main(x: Field) {\n    // Safety: testing context\n    unsafe {\n        assert(4 == conditional(x == 1));\n    }\n}\n\nunconstrained fn conditional(x: bool) -> Field {\n    if x {\n        4\n    } else {\n        5\n    }\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/brillig_conditional/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
